--- a/pom.xml
+++ b/pom.xml
@@ -3,6 +3,19 @@
   <groupId>FoodDistribution</groupId>
   <artifactId>FoodDistribution</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  <dependencies>
+	<dependency>
+	      <groupId>org.json</groupId>
+	      <artifactId>json</artifactId>
+	      <version>20190722</version>
+	 </dependency>
+
+	<dependency>
+		<groupId>org.mongodb</groupId>
+			<artifactId>mongodb-driver-sync</artifactId>
+		<version>3.11.2</version>
+	</dependency>
+  </dependencies>
   <build>
     <sourceDirectory>src</sourceDirectory>
     <plugins>
